# meshtacean

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  DESIGN.md  README.md  TODO.md  build.rs
src/: main.rs  node.rs  utils.rs
src/client/: bluetooth_client.rs  mesh_client.rs  serial_client.rs  tcp_client.rs
src/protobuf/: nanopb.rs
src/protobufs/: meshtastic.rs
