[package]
name = "meshtacean"
version = "0.1.0"
authors = ["Clay Rosenthal <rust@mail.clayrosenthal.me>"]
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/clayrosenthal/meshtacean"
description = "A CLI for the Meshtastic Client API"
readme = "README.md"
keywords = ["meshtastic", "mesh", "lora", "hardware"]
categories = ["command-line-interface", "hardware-support"]
include = [
    "build.rs",
    "src/**/*",
    "src/*",
    "protobufs/*",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]

[features]
gen = ["dep:prost-build"]

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
dirs = "6.0.0"
prost = "0.13.4"
prost-types = "0.13.4"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tokio-serial = "5.4.5"


[build-dependencies]
prost-build = { version = "0.13.4", optional = true }
